#60 gap between top and sidebar are no longer visible

--- a/src/components/whole-app/nav-top-bar/nav-top-bar.module.css
+++ b/src/components/whole-app/nav-top-bar/nav-top-bar.module.css
@@ -8,7 +8,7 @@
 }
 
 .logo {
-  height: 35px;
+  height: 40px;
   transform: scale(1.5);
 }
 
